# website-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish-docker-image.yaml  deploy.yaml  manual-workflow.yaml  my-github-actions.yaml  run-test-suite.yaml
devops/ansible/: README.md
devops/ansible/playbooks/: hello-world.yaml  prepare-docker.yaml  run-with-docker.yaml
tests/: conftest.py  test_common.py  test_health_resource.py  test_welcome_page.py
website_project/: common.py  login_manager.py  main.py  models.py  user.py
website_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
website_project/activity/: __init__.py  running.py  swimming.py
website_project/blueprints/: __init__.py
website_project/blueprints/auth/: __init__.py  auth.py  login_manager.py
website_project/blueprints/auth/templates/: signup.html
website_project/blueprints/base/: base.py
website_project/blueprints/form/: form.py
website_project/blueprints/form/templates/: activity_data.html  activity_form.html
website_project/database/: driver.py  engine.py
website_project/templates/: activity_data.html  activity_form.html  base.html  base_with_margin.html  login.html  profile.html  signup.html  welcome.html
