[tool.poetry]
name = "website-project"
version = "0.1.0"
description = "My website project to register activities"
authors = ["Patryk Laskowski <patryk.jacek.laskowski@gmail.com>"]
readme = "README.md"
packages = [{include = "website_project"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
